tests/snapshot/inputs/errors/array_at_out_of_bound.ncl
# capture = 'stderr'
# command = []
std.array.at 2 [1]
